dist/1.0/bin/sample/retrieveUnpackaged/objects/Local_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Point__c</fullName>
        <description>Internal contact, usually LAM managing local opportunity, must be assigned as contact to GTS CE Retail account</description>
        <inlineHelpText>Internal contact, usually LAM managing local opportunity, must be assigned as contact to GTS CE Retail account</inlineHelpText>
        <label>Contact Point</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Local Opportunities</relationshipLabel>
        <relationshipName>R00N20000001RnlLEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <label>GTS Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product__c</fullName>
        <label>Product</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Customer_ID__c</fullName>
        <label>Local Customer ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Opportunity_ID__c</fullName>
        <label>Local Opportunity ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Opportunity_Stage__c</fullName>
        <label>Local Opportunity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Suspect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Local Opportunities</relationshipLabel>
        <relationshipName>R00N20000001RNqNEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Local Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Local Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOP{000000000}</displayFormat>
        <label>Local Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>